include/zynum/blas/blas.h

typedef int32_t zynum_blas_int;
typedef struct {
    float real;
    float imag;
} zynum_blas_complex_float;
typedef struct {
    double real;
    double imag;
} zynum_blas_complex_double;
zynum_blas_complex_double zdotu_(const zynum_blas_int *n, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *y, const zynum_blas_int *incy);
zynum_blas_complex_float cdotc_(const zynum_blas_int *n, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *y, const zynum_blas_int *incy);
zynum_blas_complex_double zdotc_(const zynum_blas_int *n, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *y, const zynum_blas_int *incy);
void cdotu_sub_(const zynum_blas_int *n, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *y, const zynum_blas_int *incy, zynum_blas_complex_float *out);
void zdotu_sub_(const zynum_blas_int *n, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *y, const zynum_blas_int *incy, zynum_blas_complex_double *out);
void cdotc_sub_(const zynum_blas_int *n, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *y, const zynum_blas_int *incy, zynum_blas_complex_float *out);
void zdotc_sub_(const zynum_blas_int *n, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *y, const zynum_blas_int *incy, zynum_blas_complex_double *out);
float sdsdot_(const zynum_blas_int *n, const float *sb, const float *x, const zynum_blas_int *incx, const float *y, const zynum_blas_int *incy);
double dsdot_(const zynum_blas_int *n, const float *x, const zynum_blas_int *incx, const float *y, const zynum_blas_int *incy);
float snrm2_(const zynum_blas_int *n, const float *x, const zynum_blas_int *incx);
double dnrm2_(const zynum_blas_int *n, const double *x, const zynum_blas_int *incx);
float scnrm2_(const zynum_blas_int *n, const zynum_blas_complex_float *x, const zynum_blas_int *incx);
double dznrm2_(const zynum_blas_int *n, const zynum_blas_complex_double *x, const zynum_blas_int *incx);
float sasum_(const zynum_blas_int *n, const float *x, const zynum_blas_int *incx);
double dasum_(const zynum_blas_int *n, const double *x, const zynum_blas_int *incx);
float scasum_(const zynum_blas_int *n, const zynum_blas_complex_float *x, const zynum_blas_int *incx);
double dzasum_(const zynum_blas_int *n, const zynum_blas_complex_double *x, const zynum_blas_int *incx);
zynum_blas_int isamax_(const zynum_blas_int *n, const float *x, const zynum_blas_int *incx);
zynum_blas_int idamax_(const zynum_blas_int *n, const double *x, const zynum_blas_int *incx);
zynum_blas_int icamax_(const zynum_blas_int *n, const zynum_blas_complex_float *x, const zynum_blas_int *incx);
zynum_blas_int izamax_(const zynum_blas_int *n, const zynum_blas_complex_double *x, const zynum_blas_int *incx);
void srotg_(float *a, float *b, float *c, float *s);
void drotg_(double *a, double *b, double *c, double *s);
void crotg_(zynum_blas_complex_float *a, zynum_blas_complex_float *b, float *c, zynum_blas_complex_float *s);
void zrotg_(zynum_blas_complex_double *a, zynum_blas_complex_double *b, double *c, zynum_blas_complex_double *s);
void srot_(const zynum_blas_int *n, float *x, const zynum_blas_int *incx, float *y, const zynum_blas_int *incy, const float *c, const float *s);
void drot_(const zynum_blas_int *n, double *x, const zynum_blas_int *incx, double *y, const zynum_blas_int *incy, const double *c, const double *s);