include/zynum/blas/blas.f90


    function zdotu( &
        n, x, incx, y, incy &
    ) bind(C, name="zdotu_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_double) :: res
    end function zdotu

    function cdotc( &
        n, x, incx, y, incy &
    ) bind(C, name="cdotc_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_float) :: res
    end function cdotc

    function zdotc( &
        n, x, incx, y, incy &
    ) bind(C, name="zdotc_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_double) :: res
    end function zdotc

    subroutine cdotu_sub( &
        n, x, incx, y, incy, out &
    ) bind(C, name="cdotu_sub_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_float), intent(inout) :: out
    end subroutine cdotu_sub

    subroutine zdotu_sub( &
        n, x, incx, y, incy, out &
    ) bind(C, name="zdotu_sub_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_double), intent(inout) :: out
    end subroutine zdotu_sub

    subroutine cdotc_sub( &
        n, x, incx, y, incy, out &
    ) bind(C, name="cdotc_sub_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_float), intent(inout) :: out
    end subroutine cdotc_sub

    subroutine zdotc_sub( &
        n, x, incx, y, incy, out &
    ) bind(C, name="zdotc_sub_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_double), intent(inout) :: out
    end subroutine zdotc_sub

    function sdsdot( &
        n, sb, x, incx, y, incy &
    ) bind(C, name="sdsdot_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: sb
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_float) :: res
    end function sdsdot

    function dsdot( &
        n, x, incx, y, incy &
    ) bind(C, name="dsdot_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_double) :: res
    end function dsdot

    function snrm2( &
        n, x, incx &
    ) bind(C, name="snrm2_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float) :: res
    end function snrm2

    function dnrm2( &
        n, x, incx &
    ) bind(C, name="dnrm2_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double) :: res
    end function dnrm2

    function scnrm2( &
        n, x, incx &
    ) bind(C, name="scnrm2_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float) :: res
    end function scnrm2

    function dznrm2( &
        n, x, incx &
    ) bind(C, name="dznrm2_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double) :: res
    end function dznrm2

    function sasum( &
        n, x, incx &
    ) bind(C, name="sasum_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float) :: res
    end function sasum

    function dasum( &
        n, x, incx &
    ) bind(C, name="dasum_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double) :: res
    end function dasum

    function scasum( &
        n, x, incx &
    ) bind(C, name="scasum_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float) :: res
    end function scasum

    function dzasum( &
        n, x, incx &
    ) bind(C, name="dzasum_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double) :: res
    end function dzasum

    function isamax( &
        n, x, incx &
    ) bind(C, name="isamax_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      integer(blasint) :: res
    end function isamax

    function idamax( &
        n, x, incx &
    ) bind(C, name="idamax_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      integer(blasint) :: res
    end function idamax

    function icamax( &
        n, x, incx &
    ) bind(C, name="icamax_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      integer(blasint) :: res
    end function icamax

    function izamax( &
        n, x, incx &
    ) bind(C, name="izamax_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      integer(blasint) :: res
    end function izamax

    subroutine srotg( &
        a, b, c, s &
    ) bind(C, name="srotg_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      real(c_float), intent(inout) :: a
      real(c_float), intent(inout) :: b
      real(c_float), intent(inout) :: c
      real(c_float), intent(inout) :: s
    end subroutine srotg

    subroutine drotg( &
        a, b, c, s &
    ) bind(C, name="drotg_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      real(c_double), intent(inout) :: a
      real(c_double), intent(inout) :: b
      real(c_double), intent(inout) :: c
      real(c_double), intent(inout) :: s
    end subroutine drotg

    subroutine crotg( &
        a, b, c, s &
    ) bind(C, name="crotg_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      complex(blas_complex_float), intent(inout) :: a
      complex(blas_complex_float), intent(inout) :: b
      real(c_float), intent(inout) :: c
      complex(blas_complex_float), intent(inout) :: s
    end subroutine crotg

    subroutine zrotg( &
        a, b, c, s &
    ) bind(C, name="zrotg_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      complex(blas_complex_double), intent(inout) :: a
      complex(blas_complex_double), intent(inout) :: b
      real(c_double), intent(inout) :: c
      complex(blas_complex_double), intent(inout) :: s
    end subroutine zrotg

    subroutine srot( &
        n, x, incx, y, incy, c, &
        s &
    ) bind(C, name="srot_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_float), intent(in) :: c
      real(c_float), intent(in) :: s
    end subroutine srot

    subroutine drot( &
        n, x, incx, y, incy, c, &
        s &
    ) bind(C, name="drot_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_double), intent(in) :: c
      real(c_double), intent(in) :: s
    end subroutine drot
